# ez-plot

./: CMakeLists.txt
inc/: plotter.hpp
src/: main.cpp  plotter.cpp
